--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,7 +63,33 @@
     </form>
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
     <script>
-      const socket = io("http://localhost:4000");
+      const socket = io("http://localhost:8000", {
+        transports: ["websocket"],
+      });
+
+      // client-side
+      socket.on("connect", () => {
+        console.log("connected", socket.id); // x8WIv7-mJelg7on_ALbx
+      });
+
+      socket.on("connect_error", (err) => {
+        // the reason of the error, for example "xhr poll error"
+        console.log(err.message);
+
+        // some additional description, for example the status code of the initial HTTP response
+        console.log(err.description);
+
+        // some additional context, for example the XMLHttpRequest object
+        console.log(err.context);
+      });
+
+      socket.on("CLIENT_CONNECTED", (event) => {
+        console.log("CLIENT_CONNECTED event", event);
+      });
+
+      socket.on("disconnect", () => {
+        console.log("disconnected", socket.id); // undefined
+      });
 
       // const form = document.querySelector("#form");
 
