--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,7 +63,13 @@
     </form>
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
     <script>
-      const socket = io("http://localhost:8000", {
+      // prod
+      const url = "https://scalable-ws-redis-nginx.onrender.com";
+
+      // dev
+      // const url ="http://localhost:8000";
+
+      const socket = io(url, {
         transports: ["websocket"],
       });
 
