--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,10 +64,10 @@
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
     <script>
       // prod
-      const url = "https://scalable-ws-redis-nginx.onrender.com";
+      // const url = "https://scalable-ws-redis-nginx.onrender.com";
 
       // dev
-      // const url ="http://localhost:8000";
+      const url = "http://localhost:8000";
 
       const socket = io(url, {
         transports: ["websocket"],
